src/site/styles/user/layout-fixes.scss
/* Increase width of content (default is 700px)
   NOTE: Do not increase beyond 890px, because it will overlap garden sidebar on window width ~1400px) */
.content {
    max-width: 850px;
}

/* fix searchbox size in filetree, so it does not look weird when window is small */
.filetree-sidebar .search-button {
    width: 150px;
}

/* make toc use all the available space */
.toc-container {
    max-height: fit-content;
}

/* smaller padding on toc */
.toc > ol {
    padding-left: 8px;
    margin-top: 0;
}

/* remove # before every toc element */
.toc-container li::before {
    content: none !important;
}

/* styling for the footer (for imprint and such) */
.markdown-preview-view {
    padding: 0;
}
body {
    display: flex;
    flex-direction: column;
}
main {
    flex: 1;
    padding: 1em 1em 0 1em;
}
footer {
    display: flex;
    justify-content: center;
    background-color: var(--background-secondary);
    padding: 1em 0;
    margin-top: 2em;
    width: 100%;
}
footer a {
    text-decoration: none;
}

/* Fix overflow, so button and toc position is correct */
html, body {
    overflow-x: visible;
}

